--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
@@ -22,7 +23,8 @@
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
     "q": "^1.5.1",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.0",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
