--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "analyze": "react-scripts build && source-map-explorer build/static/js/*.js",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
